Fix 'Role Permissions' SonarQube Issue